--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     <summary>Best Transcriber in the entire multiverse</summary>
                     <p>Skills</p>
                     <audio controls>
-                        <source src="Recording.m4a" type="audio/m4a">
+                        <source src="Recording.mp3" type="audio/mp3">
                         Your browser does not support the audio element.
                     </audio>
                     <video width="400px" height="200px" controls>
-                        <source src="Video.mkv" type="video/mkv">
+                        <source src="Video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </details>
