--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     the tags b and strong to indicate that the latter one is more important
                 </p>
                 <p>Eric: <em>Skill Issue</em></p>
-                <img src="RandomPic these guys want.png" height="100px" width="200px">
+                <img src="Pic.png" height="100" width="200">
                 <p>Eric: God dammit Eric you want to test my transcribing skills!?!</p>
                 <details>
                     <summary>Best Transcriber in the entire multiverse</summary>
@@ -55,7 +55,7 @@
                         <source src="Recording.mp3" type="audio/mp3">
                         Your browser does not support the audio element.
                     </audio>
-                    <video width="400px" height="200px" controls>
+                    <video width="400" height="200" controls>
                         <source src="Video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
