Added Alt to image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     the tags b and strong to indicate that the latter one is more important
                 </p>
                 <p>Eric: <em>Skill Issue</em></p>
-                <img src="Pic.png" height="100" width="200">
+                <img src="Pic.png" height="100" width="200" alt="A random Picture I made">
                 <p>Eric: God dammit Eric you want to test my transcribing skills!?!</p>
                 <details>
                     <summary>Best Transcriber in the entire multiverse</summary>
