Part 2 and some fixes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     the tags b and strong to indicate that the latter one is more important
                 </p>
                 <p>Eric: <em>Skill Issue</em></p>
+                <i>Eric Then presented the following diagram for ideas of divination. No one knows what it means to this day.</i>
                 <img src="Pic.png" height="100" width="200" alt="A random Picture I made">
                 <p>Eric: God dammit Eric you want to test my transcribing skills!?!</p>
                 <details>
