Finished up adding selectors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <h3>Table of Contents</h3>
             <nav>
-                <a style="text-decoration: none;" href="#mainContent">Meeting Minutes</a>
+                <a title="Go To Meeting Minutes"style="text-decoration: none;" href="#mainContent">Meeting Minutes</a>
             </nav>
             <hr>
         </header>
